fix: fix content overflow on mobile screen

--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,9 @@
     /* Colors */
     --bg-light: rgba(208, 231, 210, 0.27);
     --bg-dark: rgba(6, 15, 7, 0.492);
-
     --primary-dark: #618264;
     --primary-light: #79ac78;
+    --primary-transparent: #79ac7845;
     --secondary: #d0e7d2;
 }
 
@@ -18,14 +18,14 @@
 
 body {
     font-family: Inter, sans-serif;
-    color:var(--primary-dark);
+    color: var(--primary-dark);
     filter: hue-rotate(350deg);
 }
 
 main {
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-position: -500px; */
+    background-position: -400px;
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -33,13 +33,11 @@ main {
 
 .overlay-container {
     background-image: linear-gradient(var(--bg-light), var(--bg-dark));
-
     height: 100%;
-    /* filter: opacity(100%); */
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem;
+    padding: 2.5rem;
     justify-content: space-between;
     width: 100%;
 }
@@ -51,12 +49,13 @@ main {
 }
 
 .outer-circle {
-    height: 283px;
-    width: 283px;
+    height: 250px;
+    width: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .inner-circle {
@@ -82,40 +81,40 @@ main {
 }
 
 .time-container {
-    width: 100%;
-    display: grid;
-    grid-template-rows: 5em 2em;
-    grid-template-columns: 5em 1em 5em 1em 5em 1em 5rem;
+    display: flex;
     justify-content: space-between;
+    width: 100%;
+
     & .time-hand-card {
-        /* background-color: var(--secondary); */
+        position: relative;
+        width: 4em;
+        height: 4em;
+
+        background-color: var(--secondary);
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 10px;
-        background-image: linear-gradient(to right, var(--secondary) 88%, var(--primary-light) 50%);
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
 
-    & .dot {
-        align-self: center;
-      /* font-size: 2.5rem; */
-
+    & .time-hand-label {
+        position: absolute;
+        bottom: 0;
+        font-size: 0.7rem;
+        color: var(--primary-light);
     }
 
-    & .handle-label {
-      justify-self: center;
-      color: var(--primary-light);
-    }
-
-    & .time {
-      font-size: 2.5rem;
+    & .time-hand-time {
+        font-size: 2.5rem;
     }
 }
 
 .message-container {
-    background-color: var(--primary-light);
+    background-color: var(--primary-transparent);
     padding: 1rem;
     border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
     & .message {
         color: #fff;
@@ -123,16 +122,19 @@ main {
     }
 }
 
-
 .button-container {
-
-   & .wish-me {
-      width: 12rem;
-      height: 3rem;
-      border-radius: 10px;
-      border: none;
-      background-image: linear-gradient(to right, var(--secondary) 85%, var(--primary-light) 50%);
-      color: var(--primary-dark);
-      
-   }
+    & .wish-me-btn {
+        width: 12rem;
+        height: 3rem;
+        border-radius: 10px;
+        border: none;
+        background-image: linear-gradient(
+            to right,
+            var(--secondary) 85%,
+            var(--primary-light) 50%
+        );
+        color: var(--primary-dark);
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        font-weight: 600;
+    }
 }
